[gd_scene load_steps=3 format=3 uid="uid://bvx80a00a1b2c"]

[ext_resource type="Script" path="res://scripts/Galaxy3DController.gd" id="1_galaxy3d"]
[ext_resource type="Script" path="res://scripts/CameraController3D.gd" id="2_camera3d"]

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.02, 0.02, 0.08, 1)
ambient_light_source = 2
ambient_light_color = Color(0.2, 0.2, 0.4, 1)
ambient_light_energy = 0.4
glow_enabled = true
glow_intensity = 0.8
glow_strength = 1.0
glow_bloom = 0.1

[node name="Galaxy3DScene" type="Node3D"]
script = ExtResource("1_galaxy3d")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 8, 12)
fov = 50.0
near = 0.1
far = 100.0
script = ExtResource("2_camera3d")

[node name="Environment" type="Node3D" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 2, 8, 2)
light_energy = 1.2
light_color = Color(0.9, 0.9, 1, 1)
shadow_enabled = true
shadow_filter = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_1")

[node name="PlanetContainer" type="Node3D" parent="."]

[node name="ShipContainer" type="Node3D" parent="."]

[node name="EffectsContainer" type="Node3D" parent="."]